--- a/хорошо index (copy).html
+++ b/хорошо index (copy).html
@@ -90,8 +90,8 @@
 
   <!-- Game 1 -->
   <div class="game-card">
-    <img src="assets/Screenshot from 2025-03-09 20-02-51amazon.png" alt="Cherry-Banana Diamonds">
-    <h3>Cherry-Banana Diamonds</h3>
+    <img src="assets/promo1.png" alt="Match 1">
+    <h3>Match 1 AHA</h3>
     <p>Classic Match-3 with fun mechanics.</p>
     <div class="buttons">
       <a href="games/HTML5_Match_1_AHA_1/index.html" target="_blank">Play Now</a>
@@ -100,8 +100,8 @@
 
   <!-- Game 2 -->
   <div class="game-card">
-    <img src="assets/ScreenshotAmazon.png" alt="Frenzy Candy Mania">
-    <h3>Frenzy Candy Mania</h3>
+    <img src="assets/ScreenshotAmazon1.png" alt="Match 2">
+    <h3>Match 2 AHA</h3>
     <p>Even more challenging levels and combos!</p>
     <div class="buttons">
       <a href="games/HTML5_Match_2_AHA_2/index.html" target="_blank">Play Now</a>
@@ -110,8 +110,8 @@
 
   <!-- Game 3 -->
   <div class="game-card">
-    <img src="assets/ScreenshotAmazon5k.png" alt="Fruit Reels -3">
-    <h3>Fruit Reels -3</h3>
+    <img src="assets/ScreenshotAmazon2.png" alt="Casino 1">
+    <h3>Casino 1 AHA</h3>
     <p>Fruit slot machine with juicy rewards.</p>
     <div class="buttons">
       <a href="games/HTML5_Casino_1_AHA_1/index.html" target="_blank">Play Now</a>
@@ -120,8 +120,8 @@
 
   <!-- Game 4 -->
   <div class="game-card">
-    <img src="assets/ScreenshotAmazon1.png" alt="Fruit Reels -5">
-    <h3>Fruit Reels -5</h3>
+    <img src="assets/ScreenshotAmazon3.png" alt="Casino 2">
+    <h3>Casino 2 AHA</h3>
     <p>Another slot machine with bigger screen size.</p>
     <div class="buttons">
       <a href="games/HTML5_Casino_2_AHA_1024x600/index.html" target="_blank">Play Now</a>
